--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,12 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
+
+@import 'material-dashboard/assets/css/material-dashboard.css';
+@import 'bootstrap/dist/css/bootstrap.min.css';
+@import 'bootstrap-icons/font/bootstrap-icons.css'; 
+@import '@fortawesome/fontawesome-free/css/all.min.css';
+
+
+
+
