--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,6 +7,15 @@
 @import 'bootstrap-icons/font/bootstrap-icons.css'; 
 @import '@fortawesome/fontawesome-free/css/all.min.css';
 @import 'toastr/build/toastr.min.css';
+@import "datatables.net-bs5/css/dataTables.bootstrap5.css";
+
+
+
+
+
+
+
+
 
 
 
