--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,6 +8,8 @@
 @import '@fortawesome/fontawesome-free/css/all.min.css';
 @import 'toastr/build/toastr.min.css';
 @import "datatables.net-bs5/css/dataTables.bootstrap5.css";
+@import "datatables.net-responsive-bs5/css/responsive.bootstrap5.css";
+
 
 
 
